--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
             <div class="settings-box">
                 <p>a third option box goes here</p>
+                <input id="gridSizeSlider" type="range" value="16" min="1" max="100"/>
             </div>
 
         </div>
