create clear grid button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <p>This is a test</p>
             </div>
             <div class="settings-box">
-                <p>another option box goes here</p>
+                <p>Eraser</p>
+                <button id="clear-grid-btn">Clear grid</button>
             </div>
             <div class="settings-box">
                 <p>a third option box goes here</p>
