add major refactoring and fixing function scope

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
             </div>
             <div class="settings-box">
                 <p>Eraser</p>
-                <button id="clear-grid-btn">Clear grid</button>
+                <button id="clear-grid-btn">Clear Grid</button>
             </div>
             <div class="settings-box">
-                <p>a third option box goes here</p>
+                <p>Grid Size</p>
+                <p id="grid-size-label">16 x 16</p>
                 <input id="gridSizeSlider" type="range" value="16" min="16" max="60"/>
             </div>
 
