add an eraser button

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div class="settings-box">
                 <p>This is a test</p>
             </div>
-            <div class="settings-box">
-                <p>Eraser</p>
+            <div class="settings-box eraser-box">
+                <button id="eraser-btn">Eraser</button>
                 <button id="clear-grid-btn">Clear Grid</button>
             </div>
             <div class="settings-box">
