add basic eraser functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="settings-box">
                 <p>This is a test</p>
             </div>
-            <div class="settings-box eraser-box">
+            <div class="settings-box" id="eraser-box">
                 <button id="eraser-btn">Eraser</button>
                 <button id="clear-grid-btn">Clear Grid</button>
             </div>
