revise button shape and color

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <p>This is a test</p>
             </div>
             <div class="settings-box" id="eraser-box">
-                <button id="eraser-btn">Eraser</button>
+                <button id="eraser-btn">Get Eraser</button>
                 <button id="clear-grid-btn">Clear Grid</button>
             </div>
-            <div class="settings-box">
+            <div class="settings-box" id="grid-size-box">
                 <p>Grid Size</p>
                 <p id="grid-size-label">16 x 16</p>
-                <input id="gridSizeSlider" type="range" value="16" min="16" max="60"/>
+                <input id="grid-size-slider" type="range" value="16" min="16" max="60"/>
             </div>
 
         </div>
