remove all coloris

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./coloris/coloris.css"/>
     <!-- defer loads html before any js -->
     <script src="./script.js" defer></script>
-    <script src="./coloris/coloris.js" defer></script>
-
 
 </head>
 <body>
@@ -29,10 +26,7 @@
 
             <div class="settings-box">
                 <p>Pen color</p>
-                <!-- initialize the coloris tool and set a default value for the color picker (brush) -->
-                <input type="text" class="coloris" value="#000000" data-coloris />
-
-
+                <p>Background Color</p>
             </div>
             <div class="settings-box" id="eraser-box">
                 <button id="eraser-btn">Get Eraser</button>
