fix background color eraser marks left behind in older background color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main-container">
 
         <div class="left-panel">
-            <h2>Title goes here</h2>
+            <h2>Grid Settings</h2>
 
             <div class="settings-box">
                 <div class="pen-color-div">
