revise color picker css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="settings-box">
                 <div class="pen-color-div">
-                    <p>Pen color</p>
+                    <p>Pen Color</p>
                     <!-- USE THE ONCHANGE event listener to capture the new input user value whenever a change is made-->
                     <input class="pen-color" onchange="changePenColor();" type="color" value="#000000"/>
                 </div>
