--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <!-- Credit to https://github.com/michalosman for footer year setup  -->
+        <p>
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            
+            <a href="https://github.com/Elegant-Geek" target="_blank"><strong>&nbsp;Elegant-Geek</strong></a>
+        </p> 
+    </div>
     
 </body>
 </html>
