finalize css colors pt 1

--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-left">
-            <h1>Etch a Sketch</h1>
-        </div>
-        <div class="header-right">
-            <p>social media links go here</p>
-        </div>
+        <h1>Etch a Sketch</h1>
     </div>
     <div class="main-container">
-
         <div class="left-panel">
             <h2>Grid Settings</h2>
 
@@ -66,6 +60,12 @@
             
             <a href="https://github.com/Elegant-Geek" target="_blank"><strong>&nbsp;Elegant-Geek</strong></a>
         </p> 
+        <div class="social-media-container">
+            <a href="https://www.facebook.com/American1diot/"><img height="30" src="./images/facebook-app.png"/></a>
+               <a href="https://www.instagram.com/heychickenhead/"><img height="30" src="./images/ig-instagram.png"/></a>
+               <a href="https://www.linkedin.com/in/clark-jamie/"><img height="30" src="./images/linkedin-app.png"/></a>
+               <a href="https://github.com/Elegant-Geek"><img height="30" src="./images/gh.png"/></a>
+        </div>
     </div>
     
 </body>
