--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               document.write(new Date().getFullYear())
             </script>
 
-            <a href="https://github.com/Elegant-Geek" target="_blank"><strong>&nbsp;Elegant-Geek</strong></a>
+            <a href="https://github.com/Elegant-Geek" target="_blank"><strong>Elegant-Geek</strong></a>
         </p> 
         <div class="social-media-container">
             <a href="https://www.facebook.com/American1diot/"><img height="30" src="./images/facebook-app.png"/></a>
